--- a/composer.json
+++ b/composer.json
@@ -21,12 +21,19 @@
         "docs": "https://docs.flarum.org/"
     },
     "require": {
-        "flarum/core": "^1.8",
+        "afrux/forum-stats-widget": "*",
+        "afrux/news-widget": "*",
+        "afrux/online-users-widget": "*",
+        "askvortsov/flarum-moderator-warnings": "*",
+        "datlechin/flarum-traditional-rank-icons": "*",
+        "davwheat/flarum-ext-ads": "*",
+        "ecnu-im/sticky-sidenav": "*",
         "flarum/approval": "*",
         "flarum/bbcode": "*",
+        "flarum/core": "^1.3",
         "flarum/emoji": "*",
-        "flarum/lang-english": "*",
         "flarum/flags": "*",
+        "flarum/lang-english": "*",
         "flarum/likes": "*",
         "flarum/lock": "*",
         "flarum/markdown": "*",
@@ -37,7 +44,32 @@
         "flarum/sticky": "*",
         "flarum/subscriptions": "*",
         "flarum/suspend": "*",
-        "flarum/tags": "*"
+        "flarum/tags": "*",
+        "fof/analytics": "*",
+        "fof/byobu": "*",
+        "fof/filter": "*",
+        "fof/formatting": "*",
+        "fof/links": "*",
+        "fof/merge-discussions": "*",
+        "fof/pages": "*",
+        "fof/polls": "*",
+        "fof/reactions": "*",
+        "fof/recaptcha": "*",
+        "fof/sitemap": "*",
+        "fof/spamblock": "*",
+        "fof/stopforumspam": "*",
+        "fof/upload": "*",
+        "fof/user-directory": "*",
+        "ianm/html-head": "*",
+        "ianm/level-ranks": "*",
+        "ianm/synopsis": "*",
+        "justoverclock/user-statistics": "*",
+        "kyrne/whisper": "*",
+        "malago/flarum-ads": "^0.3.2",
+        "michaelbelgium/flarum-discussion-views": "*",
+        "the-turk/flarum-flamoji": "*",
+        "tohsakarat/tags-filter": "*",
+        "v17development/flarum-seo": "*"
     },
     "config": {
         "preferred-install": "dist",
